ags (2.2.20)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented GUI scale factor
	* implemented AgsIndicator properties
	* implemented AgsDial properties
	* improved ags_vindicator_draw() and ags_hindicator_draw() to use properties
	* improved ags_dial_draw() properties

ags (2.2.19)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented instance access from LV2UI
	* minor improvements

ags (2.2.18)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_lv2ui_plugin_test_flags(), ags_lv2ui_plugin_set_flags() and ags_lv2ui_plugin_get_flags()
	* implemented ags_base_plugin_instantiate_with_params()
	* implemented ags_lv2ui_plugin_instantiate_with_params()
	* refactored AgsLv2Bridge and AgsLiveLv2Bridge
	* improved AgsAudioApplicationContext and AgsXorgApplicationContext
	* improved lv2 plugin set flag AGS_LV2_PLUGIN_IS_SYNTHESIZER as parsing names

gs (2.2.17)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* reenabled sync counter increment before decrement fixes a race condition

ags (2.2.16)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* reverted sync counter by using conditional build

ags (2.2.15)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_main_loop_set_sync_tic() and ags_main_loop_get_sync_tic()

ags (2.2.14)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed potential dead-lock, it is some procedural code that makes paralellism work
	* reverted previous tree lock change

ags (2.2.13)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved AgsAudioLoop and AgsGenericMainLoop to use :obj-mutex as tree lock

ags (2.2.12)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed potential dead-lock

gs (2.2.11)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved ags_simple_file.c to apply logarithmic port fixup
	* improved developer's book